# url-shortener

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.MD  REPORT.MD  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  nginx.dev.conf  nginx.prod.conf
backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/env_config/base/: .env.dev.example  .env.production.example  .env.staging.example  .env.test.example
backend/scripts/: db_models.py  migrate.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py  firebase.py  redis_client.py
backend/src/core/auth/: __init__.py  main.py
backend/src/core/aws/: __init__.py  clients.py
backend/src/database/: __init__.py  database.py  generated_models.py
backend/src/database/CRUD/: user.py
backend/src/database/migrations/: env.py
backend/src/routers/: health.py  redirect.py  test.py  user.py
backend/src/routers/links/: __init__.py  links.py
backend/src/routers/links/utils/: __init__.py  shortening_algos.py
backend/src/schemas/: __init__.py  link.py
backend/src/url_shortener/: main.py
backend/src/url_shortener/core/: __init__.py
backend/src/url_shortener/core/clients/: __init__.py  aws.py  azure.py  firebase.py  redis.py  redis_client.py
backend/src/url_shortener/core/clients/utils/: test_clients_connection.py
backend/src/url_shortener/core/logger/: __init__.py  logger.py
backend/src/url_shortener/core/settings/: __init__.py  app_settings.py
backend/src/url_shortener/core/settings/environment/: __init__.py  base.py  deployment.py  dev.py  local.py
backend/src/url_shortener/database/: __init__.py  database.py  generated_models.py  main.py
backend/src/url_shortener/database/CRUD/: links.py  user.py
backend/src/url_shortener/database/migrations/: env.py
backend/src/url_shortener/database/migrations/versions/: 3694c55adf2b_empty_table_popilation.py
backend/src/url_shortener/dependencies/: __init__.py  app_settings.py  database.py  firebase.py  settings.py  storage.py
backend/src/url_shortener/routers/: __init__.py  health.py  links.py  redirect.py  test.py  user.py
backend/src/url_shortener/schemas/db/: link.py
backend/src/url_shortener/schemas/db_CRUD/: link.py
backend/src/url_shortener/schemas/endpoints/: __init__.py  link.py  user.py
backend/src/url_shortener/services/infra/: s3.py  secretsmanager.py
backend/src/url_shortener/services/infra/secrets/: __init__.py  aws.py  azure.py  secrets.py
backend/src/url_shortener/services/infra/storage/: __init__.py  aws.py  azure.py  storage.py
backend/src/url_shortener/services/shortening/: __init__.py  concrete_implementations.py  factory.py
backend/src/url_shortener/services/storage/: aws.py  azure.py  storage.py
backend/test/: conftest.py
backend/test/integration/: conftest.py
backend/test/integration/database/: conftest.py  test_user.py  test_user_crud.py
backend/test/integration/endpoints/: conftest.py  test_health.py  test_user.py
backend/test/load/: load_test.js
backend/test/regression/: conftest.py  test_url_shortening_bugs.py
backend/test/smoke/: conftest.py
backend/test/smoke/endpoints/: conftest.py  test_user.py
backend/test/unit/: conftest.py  links.py  test_app_settings.py  test_link_shortening.py
backend/test/unit/aws/: test_secrets_manager.py
backend/test/unit/clients/aws/: test_s3.py  test_secrets_manager.py
backend/test/unit/clients/redis/: test_redis.py
backend/test/unit/core/logger/: __init__.py  test_colorful_formatter.py  test_logger.py
backend/test/unit/database/: test_set_up.py
backend/test/unit/database/CRUD/: __init__.py  test_links.py
backend/test/unit/dependencies/: test_firebase.py  test_storage.py
backend/test/unit/fastapi/: conftest.py  test_health.py  test_links.py  test_main.py  test_redirect.py  test_user.py
backend/test/unit/main/: __init__.py  test_main.py
backend/test/unit/routers/: __init__.py  test_health.py  test_links.py  test_redirect.py  test_user.py
backend/test/unit/services/infra/secrets/: __init__.py
backend/test/unit/services/infra/storage/: __init__.py  test_storage.py
deployment/: docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml
docs/: features.md  (+2 more)
(+161 files in other folders)
