[project]
name = "URL_shortener"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
      "fastapi",
      "uvicorn",
      "gunicorn",
      "pydantic",
      "redis",
      "pydantic-settings",
      "sqlacodegen",
      "sqlalchemy[asyncio]",
      "aiomysql",
      "cryptography",
      "firebase-admin",
      "boto3",
      "alembic"

]

[project.optional-dependencies]
dev = [
      "ruff",
      "bandit",
      "pre-commit",
]
test = [
      "pytest",
      "pytest-asyncio",
      "pytest-mock",
      "httpx",
      "pytest-cov",
      "faker",
      "factory-boy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}


[tool.ruff]
line-length = 88
exclude = [
      "src/database/generated_models.py"
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
      "N",
      "ANN",
      "TID",
      "E",
      "C4",
      "G",
      "FAST001",
      "FAST002",
      "FAST003",
      "ASYNC100",
      "S101",
      "S105",
      "S106",
      "S107",
      "S310",
      "S311",
      "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

